src/parser.output
Terminals unused in grammar

   NEW
   FORGET


Rules useless in parser due to conflicts

  114 RutineArgs: %empty


State 37 conflicts: 1 shift/reduce
State 40 conflicts: 2 reduce/reduce
State 43 conflicts: 3 reduce/reduce
State 56 conflicts: 2 shift/reduce, 1 reduce/reduce
State 72 conflicts: 1 shift/reduce, 3 reduce/reduce
State 75 conflicts: 4 shift/reduce
State 119 conflicts: 26 reduce/reduce
State 123 conflicts: 26 reduce/reduce
State 128 conflicts: 1 shift/reduce
State 139 conflicts: 4 shift/reduce
State 140 conflicts: 4 shift/reduce
State 141 conflicts: 4 shift/reduce
State 142 conflicts: 4 shift/reduce
State 158 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: I
    2  | %empty

    3 I: Inst
    4  | I Inst

    5 Inst: Action
    6     | Def

    7 Action: VarInst SEMICOLON
    8       | FuncCall SEMICOLON
    9       | Conditional
   10       | LoopWhile
   11       | LoopFor

   12 Def: UnionDef
   13    | RegisterDef
   14    | RutineDef

   15 VarInst: VarDef
   16        | Assign

   17 VarDef: LET VarDefBody

   18 VarDefBody: Type ID OptAssign

   19 OptAssign: %empty
   20          | ASSIGNMENT RValue

   21 Assign: LValue ASSIGNMENT RValue

   22 RValue: LValue
   23       | Expression
   24       | FuncCall

   25 Expression: Number
   26           | Bool
   27           | Array
   28           | STRING
   29           | CHAR

   30 Type: Type OPEN_BRACKET Integer CLOSE_BRACKET
   31     | POINTER Type
   32     | OPEN_PAR Type CLOSE_PAR
   33     | T_UNIT
   34     | T_BOOL
   35     | T_CHAR
   36     | T_INT
   37     | T_FLOAT
   38     | T_STRING

   39 LValue: LValue OPEN_BRACKET Integer CLOSE_BRACKET
   40       | POINTER LValue
   41       | LValue DOT ID
   42       | OPEN_PAR LValue CLOSE_PAR
   43       | ID

   44 Number: Number PLUS Number
   45       | Number MINUS Number
   46       | Number ASTERISK Number
   47       | Number DIV Number
   48       | Number MODULE Number
   49       | MINUS Number
   50       | PLUS Number
   51       | Number POWER Number
   52       | OPEN_PAR Number CLOSE_PAR
   53       | LValue
   54       | FuncCall
   55       | INT
   56       | FLOAT

   57 Bool: Bool EQUIV Bool
   58     | Bool NOT_EQUIV Bool
   59     | Bool OR Bool
   60     | Bool AND Bool
   61     | NOT Bool
   62     | OPEN_PAR Bool CLOSE_PAR
   63     | Number Comp Number
   64     | TRUE
   65     | FALSE
   66     | LValue
   67     | FuncCall

   68 Comp: LESS_THAN
   69     | LESS_EQUAL_THAN
   70     | EQUIV
   71     | NOT_EQUIV
   72     | GREATER_EQUAL_THAN
   73     | GREATER_THAN

   74 Array: OPEN_BRACKET ArrExp CLOSE_BRACKET

   75 ArrExp: %empty
   76       | ArrElems RValue

   77 ArrElems: %empty
   78         | ArrElems RValue COMMA

   79 Integer: Integer PLUS Integer
   80        | Integer MINUS Integer
   81        | Integer ASTERISK Integer
   82        | Integer DIV Integer
   83        | Integer MODULE Integer
   84        | MINUS Integer
   85        | PLUS Integer
   86        | Integer POWER Integer
   87        | OPEN_PAR Integer CLOSE_PAR
   88        | LValue
   89        | FuncCall
   90        | INT

   91 FuncCall: ID OPEN_PAR ArgsExp CLOSE_PAR

   92 ArgsExp: %empty
   93        | Args RValue

   94 Args: %empty
   95     | Args RValue COMMA

   96 UnionDef: UNION ID OPEN_C_BRACE UnionBody CLOSE_C_BRACE

   97 UnionBody: Type ID SEMICOLON
   98          | UnionBody Type ID SEMICOLON

   99 RegisterDef: REGISTER ID OPEN_C_BRACE RegisterBody CLOSE_C_BRACE

  100 RegisterBody: VarDef SEMICOLON
  101             | RegisterBody VarDef SEMICOLON

  102 Conditional: IF Bool THEN I OptElsif OptElse END

  103 OptElsif: %empty
  104         | Elsifs

  105 Elsifs: ELSIF Bool THEN I
  106       | Elsifs ELSIF Bool THEN I

  107 OptElse: %empty
  108        | ELSE I

  109 LoopWhile: WHILE Bool DO I DONE

  110 LoopFor: FOR OPEN_PAR ID SEMICOLON Number SEMICOLON Number OptStep CLOSE_PAR DO I DONE

  111 OptStep: %empty
  112        | SEMICOLON Number

  113 RutineDef: ID OPEN_PAR RutineArgs CLOSE_PAR OptReturn OPEN_C_BRACE Actions CLOSE_C_BRACE

  114 RutineArgs: %empty
  115           | ArgsDef

  116 ArgsDef: Type OptRef ID OptAssign
  117        | ArgsDef Type OptRef ID OptAssign

  118 OptRef: %empty
  119       | AT

  120 OptReturn: %empty
  121          | RIGHT_ARROW Type

  122 Actions: Action
  123        | Actions Action


Terminals, with rules where they appear

$end (0) 0
error (256)
DOT (258) 41
POINTER (259) 31 40
OPEN_BRACKET (260) 30 39 74
CLOSE_BRACKET (261) 30 39 74
PLUS (262) 44 50 79 85
MINUS (263) 45 49 80 84
ASTERISK (264) 46 81
DIV (265) 47 82
MODULE (266) 48 83
POWER (267) 51 86
SEMICOLON (268) 7 8 97 98 100 101 110 112
OPEN_PAR (269) 32 42 52 62 87 91 110 113
CLOSE_PAR (270) 32 42 52 62 87 91 110 113
AND (271) 60
OR (272) 59
NOT_EQUIV (273) 58 71
NOT (274) 61
EQUIV (275) 57 70
GREATER_EQUAL_THAN (276) 72
LESS_EQUAL_THAN (277) 69
GREATER_THAN (278) 73
LESS_THAN (279) 68
ASSIGNMENT (280) 20 21
T_INT (281) 36
T_CHAR (282) 35
T_BOOL (283) 34
T_FLOAT (284) 37
T_UNIT (285) 33
T_STRING (286) 38
OPEN_C_BRACE (287) 96 99 113
CLOSE_C_BRACE (288) 96 99 113
COMMA (289) 78 95
REGISTER (290) 99
UNION (291) 96
NEW (292)
FORGET (293)
IF (294) 102
THEN (295) 102 105 106
ELSIF (296) 105 106
ELSE (297) 108
END (298) 102
WHILE (299) 109
DO (300) 109 110
DONE (301) 109 110
FOR (302) 110
LET (303) 17
AT (304) 119
RIGHT_ARROW (305) 121
INT <integer> (306) 55 90
FLOAT <flot> (307) 56
ID <id> (308) 18 41 43 91 96 97 98 99 110 113 116 117
CHAR <chr> (309) 29
STRING <str> (310) 28
TRUE <boolean> (311) 64
FALSE <boolean> (312) 65


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
S (59)
    on left: 1 2, on right: 0
I (60)
    on left: 3 4, on right: 1 4 102 105 106 108 109 110
Inst (61)
    on left: 5 6, on right: 3 4
Action (62)
    on left: 7 8 9 10 11, on right: 5 122 123
Def (63)
    on left: 12 13 14, on right: 6
VarInst (64)
    on left: 15 16, on right: 7
VarDef (65)
    on left: 17, on right: 15 100 101
VarDefBody (66)
    on left: 18, on right: 17
OptAssign (67)
    on left: 19 20, on right: 18 116 117
Assign (68)
    on left: 21, on right: 16
RValue (69)
    on left: 22 23 24, on right: 20 21 76 78 93 95
Expression (70)
    on left: 25 26 27 28 29, on right: 23
Type (71)
    on left: 30 31 32 33 34 35 36 37 38, on right: 18 30 31 32 97 98
    116 117 121
LValue (72)
    on left: 39 40 41 42 43, on right: 21 22 39 40 41 42 53 66 88
Number (73)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56, on right: 25 44
    45 46 47 48 49 50 51 52 63 110 112
Bool (74)
    on left: 57 58 59 60 61 62 63 64 65 66 67, on right: 26 57 58 59
    60 61 62 102 105 106 109
Comp (75)
    on left: 68 69 70 71 72 73, on right: 63
Array (76)
    on left: 74, on right: 27
ArrExp (77)
    on left: 75 76, on right: 74
ArrElems (78)
    on left: 77 78, on right: 76 78
Integer <integer> (79)
    on left: 79 80 81 82 83 84 85 86 87 88 89 90, on right: 30 39 79
    80 81 82 83 84 85 86 87
FuncCall (80)
    on left: 91, on right: 8 24 54 67 89
ArgsExp (81)
    on left: 92 93, on right: 91
Args (82)
    on left: 94 95, on right: 93 95
UnionDef (83)
    on left: 96, on right: 12
UnionBody (84)
    on left: 97 98, on right: 96 98
RegisterDef (85)
    on left: 99, on right: 13
RegisterBody (86)
    on left: 100 101, on right: 99 101
Conditional (87)
    on left: 102, on right: 9
OptElsif (88)
    on left: 103 104, on right: 102
Elsifs (89)
    on left: 105 106, on right: 104 106
OptElse (90)
    on left: 107 108, on right: 102
LoopWhile (91)
    on left: 109, on right: 10
LoopFor (92)
    on left: 110, on right: 11
OptStep (93)
    on left: 111 112, on right: 110
RutineDef (94)
    on left: 113, on right: 14
RutineArgs (95)
    on left: 114 115, on right: 113
ArgsDef (96)
    on left: 116 117, on right: 115 117
OptRef (97)
    on left: 118 119, on right: 116 117
OptReturn (98)
    on left: 120 121, on right: 113
Actions (99)
    on left: 122 123, on right: 113 123


State 0

    0 $accept: . S $end

    POINTER   shift, and go to state 1
    OPEN_PAR  shift, and go to state 2
    REGISTER  shift, and go to state 3
    UNION     shift, and go to state 4
    IF        shift, and go to state 5
    WHILE     shift, and go to state 6
    FOR       shift, and go to state 7
    LET       shift, and go to state 8
    ID        shift, and go to state 9

    $default  reduce using rule 2 (S)

    S            go to state 10
    I            go to state 11
    Inst         go to state 12
    Action       go to state 13
    Def          go to state 14
    VarInst      go to state 15
    VarDef       go to state 16
    Assign       go to state 17
    LValue       go to state 18
    FuncCall     go to state 19
    UnionDef     go to state 20
    RegisterDef  go to state 21
    Conditional  go to state 22
    LoopWhile    go to state 23
    LoopFor      go to state 24
    RutineDef    go to state 25


State 1

   40 LValue: POINTER . LValue

    POINTER   shift, and go to state 1
    OPEN_PAR  shift, and go to state 2
    ID        shift, and go to state 26

    LValue  go to state 27


State 2

   42 LValue: OPEN_PAR . LValue CLOSE_PAR

    POINTER   shift, and go to state 1
    OPEN_PAR  shift, and go to state 2
    ID        shift, and go to state 26

    LValue  go to state 28


State 3

   99 RegisterDef: REGISTER . ID OPEN_C_BRACE RegisterBody CLOSE_C_BRACE

    ID  shift, and go to state 29


State 4

   96 UnionDef: UNION . ID OPEN_C_BRACE UnionBody CLOSE_C_BRACE

    ID  shift, and go to state 30


State 5

  102 Conditional: IF . Bool THEN I OptElsif OptElse END

    POINTER   shift, and go to state 1
    PLUS      shift, and go to state 31
    MINUS     shift, and go to state 32
    OPEN_PAR  shift, and go to state 33
    NOT       shift, and go to state 34
    INT       shift, and go to state 35
    FLOAT     shift, and go to state 36
    ID        shift, and go to state 37
    TRUE      shift, and go to state 38
    FALSE     shift, and go to state 39

    LValue    go to state 40
    Number    go to state 41
    Bool      go to state 42
    FuncCall  go to state 43


State 6

  109 LoopWhile: WHILE . Bool DO I DONE

    POINTER   shift, and go to state 1
    PLUS      shift, and go to state 31
    MINUS     shift, and go to state 32
    OPEN_PAR  shift, and go to state 33
    NOT       shift, and go to state 34
    INT       shift, and go to state 35
    FLOAT     shift, and go to state 36
    ID        shift, and go to state 37
    TRUE      shift, and go to state 38
    FALSE     shift, and go to state 39

    LValue    go to state 40
    Number    go to state 41
    Bool      go to state 44
    FuncCall  go to state 43


State 7

  110 LoopFor: FOR . OPEN_PAR ID SEMICOLON Number SEMICOLON Number OptStep CLOSE_PAR DO I DONE

    OPEN_PAR  shift, and go to state 45


State 8

   17 VarDef: LET . VarDefBody

    POINTER   shift, and go to state 46
    OPEN_PAR  shift, and go to state 47
    T_INT     shift, and go to state 48
    T_CHAR    shift, and go to state 49
    T_BOOL    shift, and go to state 50
    T_FLOAT   shift, and go to state 51
    T_UNIT    shift, and go to state 52
    T_STRING  shift, and go to state 53

    VarDefBody  go to state 54
    Type        go to state 55


State 9

   43 LValue: ID .
   91 FuncCall: ID . OPEN_PAR ArgsExp CLOSE_PAR
  113 RutineDef: ID . OPEN_PAR RutineArgs CLOSE_PAR OptReturn OPEN_C_BRACE Actions CLOSE_C_BRACE

    OPEN_PAR  shift, and go to state 56

    $default  reduce using rule 43 (LValue)


State 10

    0 $accept: S . $end

    $end  shift, and go to state 57


State 11

    1 S: I .
    4 I: I . Inst

    POINTER   shift, and go to state 1
    OPEN_PAR  shift, and go to state 2
    REGISTER  shift, and go to state 3
    UNION     shift, and go to state 4
    IF        shift, and go to state 5
    WHILE     shift, and go to state 6
    FOR       shift, and go to state 7
    LET       shift, and go to state 8
    ID        shift, and go to state 9

    $default  reduce using rule 1 (S)

    Inst         go to state 58
    Action       go to state 13
    Def          go to state 14
    VarInst      go to state 15
    VarDef       go to state 16
    Assign       go to state 17
    LValue       go to state 18
    FuncCall     go to state 19
    UnionDef     go to state 20
    RegisterDef  go to state 21
    Conditional  go to state 22
    LoopWhile    go to state 23
    LoopFor      go to state 24
    RutineDef    go to state 25


State 12

    3 I: Inst .

    $default  reduce using rule 3 (I)


State 13

    5 Inst: Action .

    $default  reduce using rule 5 (Inst)


State 14

    6 Inst: Def .

    $default  reduce using rule 6 (Inst)


State 15

    7 Action: VarInst . SEMICOLON

    SEMICOLON  shift, and go to state 59


State 16

   15 VarInst: VarDef .

    $default  reduce using rule 15 (VarInst)


State 17

   16 VarInst: Assign .

    $default  reduce using rule 16 (VarInst)


State 18

   21 Assign: LValue . ASSIGNMENT RValue
   39 LValue: LValue . OPEN_BRACKET Integer CLOSE_BRACKET
   41       | LValue . DOT ID

    DOT           shift, and go to state 60
    OPEN_BRACKET  shift, and go to state 61
    ASSIGNMENT    shift, and go to state 62


State 19

    8 Action: FuncCall . SEMICOLON

    SEMICOLON  shift, and go to state 63


State 20

   12 Def: UnionDef .

    $default  reduce using rule 12 (Def)


State 21

   13 Def: RegisterDef .

    $default  reduce using rule 13 (Def)


State 22

    9 Action: Conditional .

    $default  reduce using rule 9 (Action)


State 23

   10 Action: LoopWhile .

    $default  reduce using rule 10 (Action)


State 24

   11 Action: LoopFor .

    $default  reduce using rule 11 (Action)


State 25

   14 Def: RutineDef .

    $default  reduce using rule 14 (Def)


State 26

   43 LValue: ID .

    $default  reduce using rule 43 (LValue)


State 27

   39 LValue: LValue . OPEN_BRACKET Integer CLOSE_BRACKET
   40       | POINTER LValue .
   41       | LValue . DOT ID

    OPEN_BRACKET  shift, and go to state 61

    $default  reduce using rule 40 (LValue)


State 28

   39 LValue: LValue . OPEN_BRACKET Integer CLOSE_BRACKET
   41       | LValue . DOT ID
   42       | OPEN_PAR LValue . CLOSE_PAR

    DOT           shift, and go to state 60
    OPEN_BRACKET  shift, and go to state 61
    CLOSE_PAR     shift, and go to state 64


State 29

   99 RegisterDef: REGISTER ID . OPEN_C_BRACE RegisterBody CLOSE_C_BRACE

    OPEN_C_BRACE  shift, and go to state 65


State 30

   96 UnionDef: UNION ID . OPEN_C_BRACE UnionBody CLOSE_C_BRACE

    OPEN_C_BRACE  shift, and go to state 66


State 31

   50 Number: PLUS . Number

    POINTER   shift, and go to state 1
    PLUS      shift, and go to state 31
    MINUS     shift, and go to state 32
    OPEN_PAR  shift, and go to state 67
    INT       shift, and go to state 35
    FLOAT     shift, and go to state 36
    ID        shift, and go to state 37

    LValue    go to state 68
    Number    go to state 69
    FuncCall  go to state 70


State 32

   49 Number: MINUS . Number

    POINTER   shift, and go to state 1
    PLUS      shift, and go to state 31
    MINUS     shift, and go to state 32
    OPEN_PAR  shift, and go to state 67
    INT       shift, and go to state 35
    FLOAT     shift, and go to state 36
    ID        shift, and go to state 37

    LValue    go to state 68
    Number    go to state 71
    FuncCall  go to state 70


State 33

   42 LValue: OPEN_PAR . LValue CLOSE_PAR
   52 Number: OPEN_PAR . Number CLOSE_PAR
   62 Bool: OPEN_PAR . Bool CLOSE_PAR

    POINTER   shift, and go to state 1
    PLUS      shift, and go to state 31
    MINUS     shift, and go to state 32
    OPEN_PAR  shift, and go to state 33
    NOT       shift, and go to state 34
    INT       shift, and go to state 35
    FLOAT     shift, and go to state 36
    ID        shift, and go to state 37
    TRUE      shift, and go to state 38
    FALSE     shift, and go to state 39

    LValue    go to state 72
    Number    go to state 73
    Bool      go to state 74
    FuncCall  go to state 43


State 34

   61 Bool: NOT . Bool

    POINTER   shift, and go to state 1
    PLUS      shift, and go to state 31
    MINUS     shift, and go to state 32
    OPEN_PAR  shift, and go to state 33
    NOT       shift, and go to state 34
    INT       shift, and go to state 35
    FLOAT     shift, and go to state 36
    ID        shift, and go to state 37
    TRUE      shift, and go to state 38
    FALSE     shift, and go to state 39

    LValue    go to state 40
    Number    go to state 41
    Bool      go to state 75
    FuncCall  go to state 43


State 35

   55 Number: INT .

    $default  reduce using rule 55 (Number)


State 36

   56 Number: FLOAT .

    $default  reduce using rule 56 (Number)


State 37

   43 LValue: ID .
   91 FuncCall: ID . OPEN_PAR ArgsExp CLOSE_PAR

    OPEN_PAR  shift, and go to state 76

    OPEN_PAR  [reduce using rule 43 (LValue)]
    $default  reduce using rule 43 (LValue)


State 38

   64 Bool: TRUE .

    $default  reduce using rule 64 (Bool)


State 39

   65 Bool: FALSE .

    $default  reduce using rule 65 (Bool)


State 40

   39 LValue: LValue . OPEN_BRACKET Integer CLOSE_BRACKET
   41       | LValue . DOT ID
   53 Number: LValue .
   66 Bool: LValue .

    DOT           shift, and go to state 60
    OPEN_BRACKET  shift, and go to state 61

    PLUS                reduce using rule 53 (Number)
    MINUS               reduce using rule 53 (Number)
    ASTERISK            reduce using rule 53 (Number)
    DIV                 reduce using rule 53 (Number)
    MODULE              reduce using rule 53 (Number)
    POWER               reduce using rule 53 (Number)
    NOT_EQUIV           reduce using rule 53 (Number)
    NOT_EQUIV           [reduce using rule 66 (Bool)]
    EQUIV               reduce using rule 53 (Number)
    EQUIV               [reduce using rule 66 (Bool)]
    GREATER_EQUAL_THAN  reduce using rule 53 (Number)
    LESS_EQUAL_THAN     reduce using rule 53 (Number)
    GREATER_THAN        reduce using rule 53 (Number)
    LESS_THAN           reduce using rule 53 (Number)
    $default            reduce using rule 66 (Bool)


State 41

   44 Number: Number . PLUS Number
   45       | Number . MINUS Number
   46       | Number . ASTERISK Number
   47       | Number . DIV Number
   48       | Number . MODULE Number
   51       | Number . POWER Number
   63 Bool: Number . Comp Number

    PLUS                shift, and go to state 77
    MINUS               shift, and go to state 78
    ASTERISK            shift, and go to state 79
    DIV                 shift, and go to state 80
    MODULE              shift, and go to state 81
    POWER               shift, and go to state 82
    NOT_EQUIV           shift, and go to state 83
    EQUIV               shift, and go to state 84
    GREATER_EQUAL_THAN  shift, and go to state 85
    LESS_EQUAL_THAN     shift, and go to state 86
    GREATER_THAN        shift, and go to state 87
    LESS_THAN           shift, and go to state 88

    Comp  go to state 89


State 42

   57 Bool: Bool . EQUIV Bool
   58     | Bool . NOT_EQUIV Bool
   59     | Bool . OR Bool
   60     | Bool . AND Bool
  102 Conditional: IF Bool . THEN I OptElsif OptElse END

    AND        shift, and go to state 90
    OR         shift, and go to state 91
    NOT_EQUIV  shift, and go to state 92
    EQUIV      shift, and go to state 93
    THEN       shift, and go to state 94


State 43

   54 Number: FuncCall .
   67 Bool: FuncCall .

    PLUS                reduce using rule 54 (Number)
    MINUS               reduce using rule 54 (Number)
    ASTERISK            reduce using rule 54 (Number)
    DIV                 reduce using rule 54 (Number)
    MODULE              reduce using rule 54 (Number)
    POWER               reduce using rule 54 (Number)
    CLOSE_PAR           reduce using rule 54 (Number)
    CLOSE_PAR           [reduce using rule 67 (Bool)]
    NOT_EQUIV           reduce using rule 54 (Number)
    NOT_EQUIV           [reduce using rule 67 (Bool)]
    EQUIV               reduce using rule 54 (Number)
    EQUIV               [reduce using rule 67 (Bool)]
    GREATER_EQUAL_THAN  reduce using rule 54 (Number)
    LESS_EQUAL_THAN     reduce using rule 54 (Number)
    GREATER_THAN        reduce using rule 54 (Number)
    LESS_THAN           reduce using rule 54 (Number)
    $default            reduce using rule 67 (Bool)


State 44

   57 Bool: Bool . EQUIV Bool
   58     | Bool . NOT_EQUIV Bool
   59     | Bool . OR Bool
   60     | Bool . AND Bool
  109 LoopWhile: WHILE Bool . DO I DONE

    AND        shift, and go to state 90
    OR         shift, and go to state 91
    NOT_EQUIV  shift, and go to state 92
    EQUIV      shift, and go to state 93
    DO         shift, and go to state 95


State 45

  110 LoopFor: FOR OPEN_PAR . ID SEMICOLON Number SEMICOLON Number OptStep CLOSE_PAR DO I DONE

    ID  shift, and go to state 96


State 46

   31 Type: POINTER . Type

    POINTER   shift, and go to state 46
    OPEN_PAR  shift, and go to state 47
    T_INT     shift, and go to state 48
    T_CHAR    shift, and go to state 49
    T_BOOL    shift, and go to state 50
    T_FLOAT   shift, and go to state 51
    T_UNIT    shift, and go to state 52
    T_STRING  shift, and go to state 53

    Type  go to state 97


State 47

   32 Type: OPEN_PAR . Type CLOSE_PAR

    POINTER   shift, and go to state 46
    OPEN_PAR  shift, and go to state 47
    T_INT     shift, and go to state 48
    T_CHAR    shift, and go to state 49
    T_BOOL    shift, and go to state 50
    T_FLOAT   shift, and go to state 51
    T_UNIT    shift, and go to state 52
    T_STRING  shift, and go to state 53

    Type  go to state 98


State 48

   36 Type: T_INT .

    $default  reduce using rule 36 (Type)


State 49

   35 Type: T_CHAR .

    $default  reduce using rule 35 (Type)


State 50

   34 Type: T_BOOL .

    $default  reduce using rule 34 (Type)


State 51

   37 Type: T_FLOAT .

    $default  reduce using rule 37 (Type)


State 52

   33 Type: T_UNIT .

    $default  reduce using rule 33 (Type)


State 53

   38 Type: T_STRING .

    $default  reduce using rule 38 (Type)


State 54

   17 VarDef: LET VarDefBody .

    $default  reduce using rule 17 (VarDef)


State 55

   18 VarDefBody: Type . ID OptAssign
   30 Type: Type . OPEN_BRACKET Integer CLOSE_BRACKET

    OPEN_BRACKET  shift, and go to state 99
    ID            shift, and go to state 100


State 56

   91 FuncCall: ID OPEN_PAR . ArgsExp CLOSE_PAR
  113 RutineDef: ID OPEN_PAR . RutineArgs CLOSE_PAR OptReturn OPEN_C_BRACE Actions CLOSE_C_BRACE

    POINTER   shift, and go to state 46
    OPEN_PAR  shift, and go to state 47
    T_INT     shift, and go to state 48
    T_CHAR    shift, and go to state 49
    T_BOOL    shift, and go to state 50
    T_FLOAT   shift, and go to state 51
    T_UNIT    shift, and go to state 52
    T_STRING  shift, and go to state 53

    POINTER    [reduce using rule 94 (Args)]
    OPEN_PAR   [reduce using rule 94 (Args)]
    CLOSE_PAR  reduce using rule 92 (ArgsExp)
    CLOSE_PAR  [reduce using rule 114 (RutineArgs)]
    $default   reduce using rule 94 (Args)

    Type        go to state 101
    ArgsExp     go to state 102
    Args        go to state 103
    RutineArgs  go to state 104
    ArgsDef     go to state 105


State 57

    0 $accept: S $end .

    $default  accept


State 58

    4 I: I Inst .

    $default  reduce using rule 4 (I)


State 59

    7 Action: VarInst SEMICOLON .

    $default  reduce using rule 7 (Action)


State 60

   41 LValue: LValue DOT . ID

    ID  shift, and go to state 106


State 61

   39 LValue: LValue OPEN_BRACKET . Integer CLOSE_BRACKET

    POINTER   shift, and go to state 1
    PLUS      shift, and go to state 107
    MINUS     shift, and go to state 108
    OPEN_PAR  shift, and go to state 109
    INT       shift, and go to state 110
    ID        shift, and go to state 37

    LValue    go to state 111
    Integer   go to state 112
    FuncCall  go to state 113


State 62

   21 Assign: LValue ASSIGNMENT . RValue

    POINTER       shift, and go to state 1
    OPEN_BRACKET  shift, and go to state 114
    PLUS          shift, and go to state 31
    MINUS         shift, and go to state 32
    OPEN_PAR      shift, and go to state 33
    NOT           shift, and go to state 34
    INT           shift, and go to state 35
    FLOAT         shift, and go to state 36
    ID            shift, and go to state 37
    CHAR          shift, and go to state 115
    STRING        shift, and go to state 116
    TRUE          shift, and go to state 38
    FALSE         shift, and go to state 39

    RValue      go to state 117
    Expression  go to state 118
    LValue      go to state 119
    Number      go to state 120
    Bool        go to state 121
    Array       go to state 122
    FuncCall    go to state 123


State 63

    8 Action: FuncCall SEMICOLON .

    $default  reduce using rule 8 (Action)


State 64

   42 LValue: OPEN_PAR LValue CLOSE_PAR .

    $default  reduce using rule 42 (LValue)


State 65

   99 RegisterDef: REGISTER ID OPEN_C_BRACE . RegisterBody CLOSE_C_BRACE

    LET  shift, and go to state 8

    VarDef        go to state 124
    RegisterBody  go to state 125


State 66

   96 UnionDef: UNION ID OPEN_C_BRACE . UnionBody CLOSE_C_BRACE

    POINTER   shift, and go to state 46
    OPEN_PAR  shift, and go to state 47
    T_INT     shift, and go to state 48
    T_CHAR    shift, and go to state 49
    T_BOOL    shift, and go to state 50
    T_FLOAT   shift, and go to state 51
    T_UNIT    shift, and go to state 52
    T_STRING  shift, and go to state 53

    Type       go to state 126
    UnionBody  go to state 127


State 67

   42 LValue: OPEN_PAR . LValue CLOSE_PAR
   52 Number: OPEN_PAR . Number CLOSE_PAR

    POINTER   shift, and go to state 1
    PLUS      shift, and go to state 31
    MINUS     shift, and go to state 32
    OPEN_PAR  shift, and go to state 67
    INT       shift, and go to state 35
    FLOAT     shift, and go to state 36
    ID        shift, and go to state 37

    LValue    go to state 128
    Number    go to state 129
    FuncCall  go to state 70


State 68

   39 LValue: LValue . OPEN_BRACKET Integer CLOSE_BRACKET
   41       | LValue . DOT ID
   53 Number: LValue .

    DOT           shift, and go to state 60
    OPEN_BRACKET  shift, and go to state 61

    $default  reduce using rule 53 (Number)


State 69

   44 Number: Number . PLUS Number
   45       | Number . MINUS Number
   46       | Number . ASTERISK Number
   47       | Number . DIV Number
   48       | Number . MODULE Number
   50       | PLUS Number .
   51       | Number . POWER Number

    ASTERISK  shift, and go to state 79
    DIV       shift, and go to state 80
    MODULE    shift, and go to state 81
    POWER     shift, and go to state 82

    $default  reduce using rule 50 (Number)


State 70

   54 Number: FuncCall .

    $default  reduce using rule 54 (Number)


State 71

   44 Number: Number . PLUS Number
   45       | Number . MINUS Number
   46       | Number . ASTERISK Number
   47       | Number . DIV Number
   48       | Number . MODULE Number
   49       | MINUS Number .
   51       | Number . POWER Number

    ASTERISK  shift, and go to state 79
    DIV       shift, and go to state 80
    MODULE    shift, and go to state 81
    POWER     shift, and go to state 82

    $default  reduce using rule 49 (Number)


State 72

   39 LValue: LValue . OPEN_BRACKET Integer CLOSE_BRACKET
   41       | LValue . DOT ID
   42       | OPEN_PAR LValue . CLOSE_PAR
   53 Number: LValue .
   66 Bool: LValue .

    DOT           shift, and go to state 60
    OPEN_BRACKET  shift, and go to state 61
    CLOSE_PAR     shift, and go to state 64

    CLOSE_PAR  [reduce using rule 53 (Number)]
    CLOSE_PAR  [reduce using rule 66 (Bool)]
    AND        reduce using rule 66 (Bool)
    OR         reduce using rule 66 (Bool)
    NOT_EQUIV  reduce using rule 53 (Number)
    NOT_EQUIV  [reduce using rule 66 (Bool)]
    EQUIV      reduce using rule 53 (Number)
    EQUIV      [reduce using rule 66 (Bool)]
    $default   reduce using rule 53 (Number)


State 73

   44 Number: Number . PLUS Number
   45       | Number . MINUS Number
   46       | Number . ASTERISK Number
   47       | Number . DIV Number
   48       | Number . MODULE Number
   51       | Number . POWER Number
   52       | OPEN_PAR Number . CLOSE_PAR
   63 Bool: Number . Comp Number

    PLUS                shift, and go to state 77
    MINUS               shift, and go to state 78
    ASTERISK            shift, and go to state 79
    DIV                 shift, and go to state 80
    MODULE              shift, and go to state 81
    POWER               shift, and go to state 82
    CLOSE_PAR           shift, and go to state 130
    NOT_EQUIV           shift, and go to state 83
    EQUIV               shift, and go to state 84
    GREATER_EQUAL_THAN  shift, and go to state 85
    LESS_EQUAL_THAN     shift, and go to state 86
    GREATER_THAN        shift, and go to state 87
    LESS_THAN           shift, and go to state 88

    Comp  go to state 89


State 74

   57 Bool: Bool . EQUIV Bool
   58     | Bool . NOT_EQUIV Bool
   59     | Bool . OR Bool
   60     | Bool . AND Bool
   62     | OPEN_PAR Bool . CLOSE_PAR

    CLOSE_PAR  shift, and go to state 131
    AND        shift, and go to state 90
    OR         shift, and go to state 91
    NOT_EQUIV  shift, and go to state 92
    EQUIV      shift, and go to state 93


State 75

   57 Bool: Bool . EQUIV Bool
   58     | Bool . NOT_EQUIV Bool
   59     | Bool . OR Bool
   60     | Bool . AND Bool
   61     | NOT Bool .

    AND        shift, and go to state 90
    OR         shift, and go to state 91
    NOT_EQUIV  shift, and go to state 92
    EQUIV      shift, and go to state 93

    AND        [reduce using rule 61 (Bool)]
    OR         [reduce using rule 61 (Bool)]
    NOT_EQUIV  [reduce using rule 61 (Bool)]
    EQUIV      [reduce using rule 61 (Bool)]
    $default   reduce using rule 61 (Bool)


State 76

   91 FuncCall: ID OPEN_PAR . ArgsExp CLOSE_PAR

    CLOSE_PAR  reduce using rule 92 (ArgsExp)
    $default   reduce using rule 94 (Args)

    ArgsExp  go to state 102
    Args     go to state 103


State 77

   44 Number: Number PLUS . Number

    POINTER   shift, and go to state 1
    PLUS      shift, and go to state 31
    MINUS     shift, and go to state 32
    OPEN_PAR  shift, and go to state 67
    INT       shift, and go to state 35
    FLOAT     shift, and go to state 36
    ID        shift, and go to state 37

    LValue    go to state 68
    Number    go to state 132
    FuncCall  go to state 70


State 78

   45 Number: Number MINUS . Number

    POINTER   shift, and go to state 1
    PLUS      shift, and go to state 31
    MINUS     shift, and go to state 32
    OPEN_PAR  shift, and go to state 67
    INT       shift, and go to state 35
    FLOAT     shift, and go to state 36
    ID        shift, and go to state 37

    LValue    go to state 68
    Number    go to state 133
    FuncCall  go to state 70


State 79

   46 Number: Number ASTERISK . Number

    POINTER   shift, and go to state 1
    PLUS      shift, and go to state 31
    MINUS     shift, and go to state 32
    OPEN_PAR  shift, and go to state 67
    INT       shift, and go to state 35
    FLOAT     shift, and go to state 36
    ID        shift, and go to state 37

    LValue    go to state 68
    Number    go to state 134
    FuncCall  go to state 70


State 80
